[package]
name = "tendermint-machine"
version = "0.2.0"
description = "An implementation of the Tendermint state machine in Rust"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/tendermint"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "1"

log = "0.4"

parity-scale-codec = { version = "3", features = ["derive"] }

futures = "0.3"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }

sp-runtime = { git = "https://github.com/serai-dex/substrate", version = "7.0.0", optional = true }

[features]
substrate = ["sp-runtime"]
