[package]
name = "monero-serai"
version = "0.1.4-alpha"
description = "A modern Monero transaction library"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/coins/monero"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { path = "../../common/std-shims", version = "^0.1.1", default-features = false }

thiserror = { version = "1", default-features = false, optional = true }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

monero-io = { path = "io", version = "0.1", default-features = false }
monero-generators = { path = "generators", version = "0.4", default-features = false }
monero-primitives = { path = "primitives", version = "0.1", default-features = false }
monero-mlsag = { path = "ringct/mlsag", version = "0.1", default-features = false }
monero-clsag = { path = "ringct/clsag", version = "0.1", default-features = false }
monero-borromean = { path = "ringct/borromean", version = "0.1", default-features = false }
monero-bulletproofs = { path = "ringct/bulletproofs", version = "0.1", default-features = false }

hex-literal = "0.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Used for the provided HTTP RPC
digest_auth = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1", default-features = false, optional = true }

[features]
std = [
  "std-shims/std",

  "thiserror",

  "zeroize/std",

  "rand_core/std",

  "monero-io/std",
  "monero-generators/std",
  "monero-primitives/std",
  "monero-mlsag/std",
  "monero-clsag/std",
  "monero-bulletproofs/std",

  "hex/std",
  "serde/std",
  "serde_json/std",
]

compile-time-generators = ["curve25519-dalek/precomputed-tables", "monero-bulletproofs/compile-time-generators"]
multisig = ["monero-clsag/multisig", "std"]
#binaries = ["tokio/rt-multi-thread", "tokio/macros", "http-rpc"]
default = ["std"]
