[package]
name = "message-box"
version = "0.1.0"
description = "Message encryption and authentication wrapper"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/message-box"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1"

zeroize = { version = "1.5", features = ["zeroize_derive"] }
zalloc = { path = "../zalloc" }
rand_core = "0.6"

hex = "0.4"
base64 = "0.13"

group = "0.12"
dalek-ff-group = { path = "../../crypto/dalek-ff-group" }
ciphersuite = { path = "../../crypto/ciphersuite", features = ["ristretto"] }

transcript = { package = "flexible-transcript", path = "../../crypto/transcript", features = ["recommended"] }
chacha20 = { version = "0.9", features = ["zeroize"] }

schnorr = { package = "schnorr-signatures", path = "../../crypto/schnorr" }

serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
serde_json = "1"
