[package]
name = "message-box"
version = "0.1.0"
description = "Message authentication wrapper"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/common/message-box"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
zeroize = { version = "1", features = ["zeroize_derive"] }
zalloc = { path = "../zalloc" }
rand_core = "0.6"

base64 = "0.13"

group = "0.12"
dalek-ff-group = { path = "../../crypto/dalek-ff-group" }
ciphersuite = { path = "../../crypto/ciphersuite", features = ["ristretto"] }

transcript = { package = "flexible-transcript", path = "../../crypto/transcript", features = ["recommended"] }

schnorr = { package = "schnorr-signatures", path = "../../crypto/schnorr" }

serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
