[package]
name = "serai-contract-tests"
version = "0.1.0"
description = "A collection of utilities for testing ink! contracts"
license = "AGPL-3.0-only"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ink_primitives = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_prelude = { version = "3", default-features = false }
ink_env = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }

[features]
std = ["scale-info/std", "ink_storage/std", "ink_env/std", "ink_metadata/std"]
ink-as-dependency = []

default = ["std"]
