[package]
name = "serai-token"
version = "0.1.0"
description = "An ink! token designed for Serai assets"
license = "AGPL-3.0-only"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

openbrush = { version = "~2.0.0", default-features = false, features = ["psp22", "ownable"] }

[lib]
name = "token"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = ["std"]
std = [
  "scale/std",
  "scale-info",
  "scale-info/std",

  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",

  "openbrush/std",
]
ink-as-dependency = []
