[package]
name = "tributary-chain"
version = "0.1.0"
description = "A micro-blockchain to provide consensus and ordering to P2P communication"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/coordinator/tributary"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "1"

subtle = "^2"
zeroize = { version = "^1.5", optional = true }
rand_core = { version = "0.6", optional = true }

blake2 = "0.10"
transcript = { package = "flexible-transcript", path = "../../crypto/transcript", features = ["recommended"] }

ciphersuite = { package = "ciphersuite", path = "../../crypto/ciphersuite", features = ["ristretto"] }
schnorr = { package = "schnorr-signatures", path = "../../crypto/schnorr" }

tendermint = { package = "tendermint-machine", path = "./tendermint" }

[dev-dependencies]
zeroize = "^1.5"
rand_core = "0.6"

[features]
tests = ["zeroize", "rand_core"]
